[gd_scene load_steps=8 format=3 uid="uid://dfma7oxl3oo5f"]

[ext_resource type="Script" uid="uid://ciwt2tl60hxay" path="res://apps/commissions_app/feedback/feedback_details.gd" id="1_t8l4s"]
[ext_resource type="Theme" uid="uid://cuqmn3lhjdfe5" path="res://assets/themes/os_95.tres" id="2_ytrpd"]
[ext_resource type="Texture2D" uid="uid://lxumg8l5qi1d" path="res://assets/ui/icons/anonymous_pfp.png" id="3_1h45o"]
[ext_resource type="Texture2D" uid="uid://dsjwfjvbgdju2" path="res://assets/ui/apps/commissions/speech_bubble.png" id="3_imh2b"]
[ext_resource type="Texture2D" uid="uid://dcajtk2fbd6wo" path="res://assets/ui/apps/commissions/speech_bubble_flipped.png" id="4_62d03"]
[ext_resource type="FontFile" uid="uid://bcmjc82liw422" path="res://assets/fonts/VictorMono-Bold.ttf" id="4_bndnc"]
[ext_resource type="Texture2D" uid="uid://blihwae41o5s" path="res://assets/images/commissions/sad_birthday.png" id="5_lfxqd"]

[node name="FeedbackDetails" type="MarginContainer"]
offset_right = 374.0
offset_bottom = 492.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_t8l4s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("2_ytrpd")
text = "Back"

[node name="Control3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="InitialCommission" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/InitialCommission"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_1h45o")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InitialCommission"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_top = 30

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/InitialCommission/MarginContainer"]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("3_imh2b")
region_rect = Rect2(0, 0, 325, 188)
patch_margin_left = 40
patch_margin_top = 40
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InitialCommission/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="FeedbackTitle" type="RichTextLabel" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_bndnc")
theme_override_font_sizes/normal_font_size = 30
text = "Title
"
fit_content = true

[node name="FeedbackId" type="RichTextLabel" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "User"
fit_content = true

[node name="Control2" type="Control" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="Date" type="RichTextLabel" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "7/7/2024"
fit_content = true

[node name="Control" type="Control" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="FeedbackDesc" type="RichTextLabel" parent="VBoxContainer/InitialCommission/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Description of commission"
fit_content = true

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="SubmittedWork" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SubmittedWork"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_top = 30

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/SubmittedWork/MarginContainer"]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("4_62d03")
region_rect = Rect2(0, 0, 325, 188)
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SubmittedWork/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SubmittedWork/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Submission" type="RichTextLabel" parent="VBoxContainer/SubmittedWork/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_bndnc")
theme_override_font_sizes/normal_font_size = 30
text = "Submission
"
fit_content = true

[node name="YourUsername" type="RichTextLabel" parent="VBoxContainer/SubmittedWork/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "User"
fit_content = true

[node name="FeedbackSubmission" type="TextureRect" parent="VBoxContainer/SubmittedWork/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_lfxqd")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SubmittedWork"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_1h45o")

[node name="Control4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="Feedback" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Feedback"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_1h45o")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Feedback"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_top = 30

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Feedback/MarginContainer"]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("3_imh2b")
region_rect = Rect2(0, 0, 325, 188)
patch_margin_left = 40
patch_margin_top = 40
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Feedback/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Feedback" type="RichTextLabel" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_bndnc")
theme_override_font_sizes/normal_font_size = 30
text = "Feedback
"
fit_content = true

[node name="FeedbackId2" type="RichTextLabel" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "User"
fit_content = true

[node name="Control" type="Control" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="FeedbackRating" type="RichTextLabel" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Rating: 1.0"
fit_content = true

[node name="FeedbackComments" type="RichTextLabel" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Comments:"
fit_content = true

[node name="Control2" type="Control" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="AmountPaid" type="RichTextLabel" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_ytrpd")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Amount Paid: $10.00"
fit_content = true

[node name="CollectPaymentButton" type="Button" parent="VBoxContainer/Feedback/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_ytrpd")
text = "Collect Payment"
